added sections + improved landing page

--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,8 @@
       </div>
       <div class="imgTitle"></div>
     </div>
+    <div class="aboutPage"></div>
+    <div class="expPage"></div>
+    <div class="contactPage"></div>
   </body>
 </html>
