--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles.css">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
     <script src="https://kit.fontawesome.com/3d03624524.js" crossorigin="anonymous"></script>
     <title>Angelina's Portfolio</title>
   </head>
