added positioning of elements in about page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <section id="1" class="aboutPage">
       <div id="two" class="art"></div>
       <div class="aboutTitle">About Me</div>
+      <div class="aboutInfo"></div>
+      <img src="" alt="" class="pics">
     </section>
 
     <section id="2" class="expPage">
